# tum-web-lab5

./: README.md  main.py  pyproject.toml
src/go2web/: main.py
